# aoc

./: .envrc  aoc.opam  aoc2021.opam  dune-project  notes.org
2021/test/: dune
2021/test/day11.t/: run.t
2021/test/day12.t/: run.t
2021/test/day13.t/: run.t
2021/test/day3.t/: run.t
2021/test/day6.t/: run.t
2021/test/day9.t/: run.t
2022/test/: dune
2022/test/day1.t/: run.t
2022/test/day2.t/: run.t
2022/test/day3.t/: run.t
2022/test/day4.t/: run.t
lib/: dune  lib.ml
meta/: dune  init.ml
test/day1.t/: run.t
test/day10.t/: run.t
test/day2.t/: run.t
test/day3.t/: run.t
test/day4.t/: run.t
test/day5.t/: run.t
test/day7.t/: run.t
test/day8.t/: run.t
